[gd_scene load_steps=3 format=3 uid="uid://b8i6kh5qj2xc3"]

[ext_resource type="Script" uid="uid://bpkoxqhtxd012" path="res://scripts/ui/LoanDialog.gd" id="1_qmygw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yv3p5"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="LoanDialog" type="Panel"]
custom_minimum_size = Vector2(400, 300)
offset_right = 400.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yv3p5")
script = ExtResource("1_qmygw")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 15.0
offset_right = 150.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Предложение займа"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Вам предлагают взять займ для покрытия расходов."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -10.0
offset_right = 100.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Сумма: 1000₽"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InterestLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Проценты: 100₽ (10%)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DueDateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Срок погашения: День 8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AcceptButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
text = "Взять"

[node name="RejectButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
text = "Отказаться"
